[package]
name = "refx-pp-py"
version = "0.4.1"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>", "ldci4 <anoletenu@gmail.com>", "10pc <kaupec1@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "refx_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "macros"] }
refx-pp = { git = "https://github.com/refx-online/refx-pp-rs", rev = "e00d16f4b9019227da6bcca2491c2d658f5f41f5" }
# refx-pp = { path = "../refx-pp-rs" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
