[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "akatsuki-pp-py"
version = "1.0.5"
requires-python = ">=3.7"
description = "osu! difficulty and pp calculation for all modes"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [{ include = "akatsuki_pp_py" }]
authors = [
    { name = "Max Ohn", email = "ohn.m@hotmail.de" },
    { name = "tsunyoku", email = "tsunyoku@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
repository = "https://github.com/osuAkatsuki/akatsuki-pp-py"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]
