[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "refx-pp-py"
version = "0.0.8"
requires-python = ">=3.7"
description = "osu! difficulty and pp calculation for all modes"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [{ include = "refx_pp_py" }]
authors = [
    { name = "Max Ohn", email = "ohn.m@hotmail.de" },
    { name = "tsunyoku", email = "tsunyoku@gmail.com" },
    { name = "ldci4", email = "anoletenu@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
repository = "https://github.com/refx-online/refx-pp-py"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]
